5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1674_1107.log
== TEST (2019-04-28 17:47:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
"0"="domingo"
print("0")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:50:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)or(d<=6):
	if (d==0):
		d=="domingo"
		print(d)
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:50:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)or(d<=6):
	if (d==0):
		d="domingo"
		print(d)
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:51:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:55:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",X,"eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:55:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",X,"eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:55:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",X,"eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:55:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",X,"eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:55:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",X,"eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:55:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",X,"eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:56:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",X,"eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:00:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",X,"eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:00:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)or(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",d,"eh invalida")
-- ERROR:
File "XXXX", line 6
    "0"="domingo"
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:01:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
		print(d)
	elif (d==1):
		d=("sugunda")
		print(d)
	elif (d==2):
		d=("terca")
		print(d)
	elif (d==3):
		d=("quarta")
		print(d)
	elif (d==4):
		d=("quinta")
		print(d)
	elif (d==5):
		d=("sexta")
		print(d)
	elif (d==6):
		d=("sabado")
		print(d)
else:
	print ("A entrada",d,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:03:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(200%1)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:03:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(200%10)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:04:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(200%100)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:04:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(200%120)
-- OUTPUT:
80
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:06:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(200%6)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:09:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(200//6)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:09:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(200//6%10)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:12:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(4//6%10)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:13:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(200//7%10)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:13:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
print(200%7)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:16:29) 
-- CODE:
print((200+4)%7)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:17:11) 
-- CODE:
print((4+4)%7)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:21:23) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)or(((df+d)%7)==0):
		d=("domingo")
		print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:21:30) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)or(((df+d)%7)==0):
		d=("domingo")
		print(d)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:23:18) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)or(((df+d)%7)==0):
		d and df =("domingo")
		print(d)
-- ERROR:
File "XXXX", line 5
    d and df =("domingo")
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:23:54) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)and(((df+d)%7)==0):
		d=("domingo")
		df=("domingo")
		print(d)
-- ERROR:
File "XXXX", line 5
    d and df =("domingo")
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:24:29) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)and(((df+d)%7)==0):
		d=("domingo")
		df=("domingo")
		print(d,df)
-- ERROR:
File "XXXX", line 5
    d and df =("domingo")
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:30:28) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)and(((df+d)%7)==0):
		d=("domingo")
		df=("domingo")
	elif (d==1)and(((df+d)%7)==1):
		d=("sugunda")
		df=("sugunda")
	elif (d==2)and(((df+d)%7)==2):
		d=("terca")
		df=("terca")
	elif (d==3)and(((df+d)%7)==3):
		d=("quarta")
		df=("quarta")
	elif (d==4)and(((df+d)%7)==4):
		d=("quinta")
		df=("quinta")
	elif (d==5)and(((df+d)%7)==5):
		d=("sexta")
		df=("sexta")
	elif (d==6)and(((df+d)%7)==6):
		d=("sabado")
		df=("sabado")
	print("Hoje eh",X,"e o dia futuro eh",Y)
else:
	print ("A entrada",d,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:30:45) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)and(((df+d)%7)==0):
		d=("domingo")
		df=("domingo")
	elif (d==1)and(((df+d)%7)==1):
		d=("sugunda")
		df=("sugunda")
	elif (d==2)and(((df+d)%7)==2):
		d=("terca")
		df=("terca")
	elif (d==3)and(((df+d)%7)==3):
		d=("quarta")
		df=("quarta")
	elif (d==4)and(((df+d)%7)==4):
		d=("quinta")
		df=("quinta")
	elif (d==5)and(((df+d)%7)==5):
		d=("sexta")
		df=("sexta")
	elif (d==6)and(((df+d)%7)==6):
		d=("sabado")
		df=("sabado")
	print("Hoje eh",d,"e o dia futuro eh",df)
else:
	print ("A entrada",d,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:37:02) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)and(((df+d)%7)==0):
		d=("domingo")
		df=("domingo")
	elif (d==1)and(((df+d)%7)==1):
		d=("sugunda")
		df=("sugunda")
	elif (d==2)and(((df+d)%7)==2):
		d=("terca")
		df=("terca")
	elif (d==3)and(((df+d)%7)==3):
		d=("quarta")
		df=("quarta")
	elif (d==4)and(((df+d)%7)==4):
		d=("quinta")
		df=("quinta")
	elif (d==5)and(((df+d)%7)==5):
		d=("sexta")
		df=("sexta")
	elif (d==6)and(((df+d)%7)==6):
		d=("sabado")
		df=("sabado")
else:
	print ("A entrada",d,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:37:56) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)and(((df+d)%7)==0):
		d=("domingo")
		df=("domingo")
	elif (d==1)and(((df+d)%7)==1):
		d=("sugunda")
		df=("sugunda")
	elif (d==2)and(((df+d)%7)==2):
		d=("terca")
		df=("terca")
	elif (d==3)and(((df+d)%7)==3):
		d=("quarta")
		df=("quarta")
	elif (d==4)and(((df+d)%7)==4):
		d=("quinta")
		df=("quinta")
	elif (d==5)and(((df+d)%7)==5):
		d=("sexta")
		df=("sexta")
	elif (d==6)and(((df+d)%7)==6):
		d=("sabado")
		df=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print("Hoje eh",d,"e o dia futuro eh",df)
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:41:24) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)and(((df+d)%7)==0):
		d=("domingo")
		df=("domingo")
	elif (d==1)and(((df+d)%7)==1):
		d=("sugunda")
		df=("sugunda")
	elif (d==2)and(((df+d)%7)==2):
		d=("terca")
		df=("terca")
	elif (d==3)and(((df+d)%7)==3):
		d=("quarta")
		df=("quarta")
	elif (d==4)and(((df+d)%7)==4):
		d=("quinta")
		df=("quinta")
	elif (d==5)and(((df+d)%7)==5):
		d=("sexta")
		df=("sexta")
	elif (d==6)and(((df+d)%7)==6):
		d=("sabado")
		df=("sabado")
	print("Hoje eh",d,"e o dia futuro eh",df)
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:47:34) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0)and(((df+d)%7)==0):
		d=("domingo")
		df=("domingo")
	elif (d==1)and(((df+d)%7)==1):
		d=("sugunda")
		df=("sugunda")
	elif (d==2)and(((df+d)%7)==2):
		d=("terca")
		df=("terca")
	elif (d==3)and(((df+d)%7)==3):
		d=("quarta")
		df=("quarta")
	elif (d==4)and(((df+d)%7)==4):
		d=("quinta")
		df=("quinta")
	elif (d==5)and(((df+d)%7)==5):
		d=("sexta")
		df=("sexta")
	elif (d==6)and(((df+d)%7)==6):
		d=("sabado")
		df=("sabado")
print("Hoje eh",d,"e o dia futuro eh",df)
-- OUTPUT:
Hoje eh 9 e o dia futuro eh 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:53:45) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print("Hoje eh",d,"e o dia futuro eh",df)
-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:57:32) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
print("Hoje eh",d,"e o dia futuro eh",df)	
else:
	print ("A entrada",d,"eh invalida")

-- ERROR:
File "XXXX", line 33
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:57:45) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print("Hoje eh",d,"e o dia futuro eh",df)	
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 18:59:51) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	if(((df+d)%7)==0):
		df=("domingo")
	if (d==1):
		d=("sugunda")
	if(((df+d)%7)==1):
		df=("sugunda")
	if (d==2):
		d=("terca")
	if(((df+d)%7)==2):
		df=("terca")
	if (d==3):
		d=("quarta")
	if (((df+d)%7)==3):
		df=("quarta")
	if (d==4):
		d=("quinta")
	if(((df+d)%7)==4):
		df=("quinta")
	if (d==5):
		d=("sexta")
	if (((df+d)%7)==5):
		df=("sexta")
	if (d==6):
		d=("sabado")
	if (((df+d)%7)==6):
		df=("sabado")
	print("Hoje eh",d,"e o dia futuro eh",df)	
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:02:28) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print("Hoje eh",d,"e o dia futuro eh",df)	
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:03:34) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:03:46) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:04:13) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:04:17) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:04:33) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:04:47) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:05:22) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:05:26) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:05:35) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:05:41) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:05:48) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif(((df+d)%7)==0):
		df=("domingo")
	elif (d==1):
		d=("sugunda")
	elif(((df+d)%7)==1):
		df=("sugunda")
	elif (d==2):
		d=("terca")
	elif(((df+d)%7)==2):
		df=("terca")
	elif (d==3):
		d=("quarta")
	elif (((df+d)%7)==3):
		df=("quarta")
	elif (d==4):
		d=("quinta")
	elif(((df+d)%7)==4):
		df=("quinta")
	elif (d==5):
		d=("sexta")
	elif (((df+d)%7)==5):
		df=("sexta")
	elif (d==6):
		d=("sabado")
	elif (((df+d)%7)==6):
		df=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:08:49) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:09:13) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:09:23) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:09:30) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:09:33) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:11:28) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:11:30) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:11:33) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:11:37) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:11:40) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:11:45) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:11:49) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:12:02) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:12:12) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:12:16) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:12:19) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:12:22) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:12:27) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:12:33) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:12:43) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))

if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d)
-- OUTPUT:
A entrada 9 eh invalida
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:13:42) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")
if df==3
	print("vamooo")
-- ERROR:
File "XXXX", line 21
    if df==3
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:13:47) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
	print(d)
else:
	print ("A entrada",d,"eh invalida")
if df==3:
	print("vamooo")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:15:19) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
if df+d==0:
	print("certo")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:16:43) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if ((d+df)%7==0):
		df=("domingo")
	elif (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:17:01) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if ((d+df)%7==0):
		df=("domingo")
	elif (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:17:06) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if ((d+df)%7==0):
		df=("domingo")
	elif (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:17:20) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if ((d+df)%7==0):
		df=("domingo")
	elif (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:18:04) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if ((d+df)%7==0):
		df=("domingo")
	if (d==0):
		d=("domingo")
		elif (d==1):
			d=("sugunda")
		elif (d==2):
			d=("terca")
		elif (d==3):
			d=("quarta")
		elif (d==4):
			d=("quinta")
		elif (d==5):
			d=("sexta")
		elif (d==6):
			d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- ERROR:
File "XXXX", line 8
    elif (d==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:19:03) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:19:12) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:19:15) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:20:07) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")










if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:20:22) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")










if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:23:49) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
	elif((d+df)%7==1):
	df=("segunda")
	elif ((d+df)%7==2):
		df=("terca")
	elif((d+df)%7==3):
		df-("quarta")
	elif((d+df)%7==4):
		df-("quinta")
	elif((d+df)%7==5):
		df=("sexta")
	elif((d+df)%7==6):
		df("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- ERROR:
File "XXXX", line 5
    elif((d+df)%7==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:24:47) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
		df=("terca")
elif((d+df)%7==3):
		df-("quarta")
elif((d+df)%7==4):
		df-("quinta")
elif((d+df)%7==5):
		df=("sexta")
elif((d+df)%7==6):
		df("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    df-("quinta")
TypeError: unsupported operand type(s) for -: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:24:54) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
		df=("terca")
elif((d+df)%7==3):
		df-("quarta")
elif((d+df)%7==4):
		df-("quinta")
elif((d+df)%7==5):
		df=("sexta")
elif((d+df)%7==6):
		df("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    df-("quinta")
TypeError: unsupported operand type(s) for -: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:26:12) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
		df=("terca")
elif((d+df)%7==3):
		df-("quarta")
elif((d+df)%7==4):
		df-("quinta")
elif((d+df)%7==5):
		df=("sexta")
elif((d+df)%7==6):
		df("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    df-("quinta")
TypeError: unsupported operand type(s) for -: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:26:41) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
		df=("terca")
elif((d+df)%7==3):
		df=("quarta")
elif((d+df)%7==4):
		df=("quinta")
elif((d+df)%7==5):
		df=("sexta")
elif((d+df)%7==6):
		df=("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:27:41) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
	df=("terca")
elif((d+df)%7==3):
	df=("quarta")
elif((d+df)%7==4):
	df=("quinta")
elif((d+df)%7==5):
	df=("sexta")
elif((d+df)%7==6):
	df=("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:27:48) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
	df=("terca")
elif((d+df)%7==3):
	df=("quarta")
elif((d+df)%7==4):
	df=("quinta")
elif((d+df)%7==5):
	df=("sexta")
elif((d+df)%7==6):
	df=("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:27:54) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
	df=("terca")
elif((d+df)%7==3):
	df=("quarta")
elif((d+df)%7==4):
	df=("quinta")
elif((d+df)%7==5):
	df=("sexta")
elif((d+df)%7==6):
	df=("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
else:
	print ("A entrada",d,"eh invalida")
print(d,df)
-- OUTPUT:
A entrada 9 eh invalida
9 quinta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:28:27) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
	df=("terca")
elif((d+df)%7==3):
	df=("quarta")
elif((d+df)%7==4):
	df=("quinta")
elif((d+df)%7==5):
	df=("sexta")
elif((d+df)%7==6):
	df=("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
	print(d,df)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:28:45) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
	df=("terca")
elif((d+df)%7==3):
	df=("quarta")
elif((d+df)%7==4):
	df=("quinta")
elif((d+df)%7==5):
	df=("sexta")
elif((d+df)%7==6):
	df=("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
	print(d,df)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 19:29:01) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
	df=("terca")
elif((d+df)%7==3):
	df=("quarta")
elif((d+df)%7==4):
	df=("quinta")
elif((d+df)%7==5):
	df=("sexta")
elif((d+df)%7==6):
	df=("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
	print("Hoje eh",d,"e o dia futuro eh",df)
else:
	print ("A entrada",d,"eh invalida")

-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 19:29:11) 
-- CODE:
d= int(input("Entre com o numero do dia de hoje: "))
df= int(input("Entre com o numero de dias apos hoje: "))
if ((d+df)%7==0):
	df=("domingo")
elif((d+df)%7==1):
	df=("segunda")
elif ((d+df)%7==2):
	df=("terca")
elif((d+df)%7==3):
	df=("quarta")
elif((d+df)%7==4):
	df=("quinta")
elif((d+df)%7==5):
	df=("sexta")
elif((d+df)%7==6):
	df=("sabado")
if (d>=0)and(d<=6):
	if (d==0):
		d=("domingo")
	elif (d==1):
		d=("sugunda")
	elif (d==2):
		d=("terca")
	elif (d==3):
		d=("quarta")
	elif (d==4):
		d=("quinta")
	elif (d==5):
		d=("sexta")
	elif (d==6):
		d=("sabado")
	print("Hoje eh",d,"e o dia futuro eh",df)
else:
	print ("A entrada",d,"eh invalida")

-- EXECUTION TIME:
0.137626
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
